Bug 196679 - soc_button_array: probe of INT33D2:00 failed with error -2
Summary: soc_button_array: probe of INT33D2:00 failed with error -2
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Input Devices (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_input-devices
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-16 16:32 UTC by Patrik Kullman
Modified: 2017-08-21 11:31 UTC (History)
2 users (show)

See Also:
Kernel Version: 4.13-rc5
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Input: soc_button_array - Silence -ENOENT error on Dell XPS13 9365 (1.25 KB, patch)
2017-08-17 11:11 UTC, Hans de Goede
Details | Diff

Description Patrik Kullman 2017-08-16 16:32:49 UTC
On my

[    0.000000] DMI: Dell Inc. XPS 13 9365/03WW2T, BIOS 1.0.17 06/08/2017

I'm getting

[    7.172275] soc_button_array: probe of INT33D2:00 failed with error -2

in dmesg on boot.

Any idea why?
Comment 1 Hans de Goede 2017-08-17 11:08:33 UTC
Hi,

This is probably caused by this bit of code in drivers/input/misc/soc_button_array.c .

Can you try this patch (the one which I'm about to attach) that should silence the error.

Regards,

Hans
Comment 2 Hans de Goede 2017-08-17 11:11:47 UTC
Created attachment 257993 [details]
Input: soc_button_array - Silence -ENOENT error on Dell XPS13 9365
Comment 3 Patrik Kullman 2017-08-17 15:15:33 UTC
It did indeed!

Although I now see the "no GPIO attached, ignoring..." message instead.
I interpret that as something being misconfigured - if it's not, it should probably still be dev_dbg?
Comment 4 Dmitry Torokhov 2017-08-17 20:37:17 UTC
Yeah, I'd say we keep it at dev_dbg().
Comment 5 Patrik Kullman 2017-08-19 07:57:09 UTC
Anyway, when can we expect this to be included upstream? 4.13? 4.14?
Comment 6 Hans de Goede 2017-08-20 09:43:16 UTC
Hi,

(In reply to Dmitry Torokhov from comment #4)
> Yeah, I'd say we keep it at dev_dbg().

Ok, I've just submitted the patch upstream (to you) keeping the dev_dbg.

Regards,

Hans
Comment 7 Hans de Goede 2017-08-20 19:57:30 UTC
Patch has been applied, closing.
Comment 8 Patrik Kullman 2017-08-21 04:56:00 UTC
Too bad there wasn't space for a "Reported-and-tested-by" trailer. :/

Looking forward to rc7/final.
Comment 9 Hans de Goede 2017-08-21 11:31:45 UTC
Hi,

(In reply to Patrik Kullman from comment #8)
> Too bad there wasn't space for a "Reported-and-tested-by" trailer. :/

Sorry I didn't think of that.

Regards,

Hans

Note You need to log in before you can comment on or make changes to this bug.